welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: value Yellow is not a member of object java.awt.Color
hH (Color.RED); hH(Color.BLUE); hH(Color.GREEN); hH(Color.Yellow)			
                                                          ^